--- a/chunk_options.Rmd
+++ b/chunk_options.Rmd
@@ -1,8 +1,9 @@
 ```{r chunk_options, include=FALSE}
 library(knitr)
+
 opts_chunk$set(
   cache     = TRUE,
-  fig.path  = "figures/"
+  fig.path  = file.path("figures/", opts_chunk$get("fig.path"))
 )
 
 opts_template$set(
