--- a/test.Rmd
+++ b/test.Rmd
@@ -5,7 +5,7 @@ date: "2015年7月3日"
 output: html_document
 ---
 
-```{r child="chunk_options.Rmd"}
+```{r child="children/chunk_options.Rmd"}
 ```
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
